--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SelectActivity</string>
+    <string name="title">Title</string>
+    <string name="close">CLOSE</string>
 
 </resources>
