Add textView, update naming conventions, and create string array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
+    <string-array name = "element_id">
+        <item>textDirection</item>
+        <item>textViewText</item>
+        <item>recycler</item>
+        <item>imageViewDisplay</item>
+        <item>buttonClose</item>
+
+    </string-array>
     <string name="app_name">Bird Image Viewer App</string>
     <string name="title">Title</string>
     <string name="close">CLOSE</string>
